--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/languages.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/languages.html.twig
@@ -4,8 +4,8 @@
         {# We get the right siteaccess with the help of ezpublish.translationSiteAccess() helper #}
         {% if lang != currentLanguage %}
         	{% do routeRef.set( "siteaccess", ezpublish.translationSiteAccess( lang ) ) %}
-            <li class="padding-navbar">
-                <a href="{{ url( routeRef ) }}"><span class="flag-icon flag-icon-{{ lang|lower|split('-')[1] }}"></span></a>
+            <li class="padding-navbar no-hover">
+                <a class="no-padding no-hover" href="{{ url( routeRef ) }}"><span class="flag-icon flag-icon-{{ lang|lower|split('-')[1] }}"></span></a>
             </li>
         {% endif %}
     {% endfor %}
