--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/biography.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/biography.html.twig
@@ -1,18 +1,11 @@
 <section id="about">
-    <div class="container">
-        <h2>{{ 'app.title.biography'|trans }}</h2>
-        <div class="row">
-            <div class="col-sm-6 wow fadeInLeft">
+    <div class="container-fluid">
+            <h2 class="visible-xs">{{ 'app.title.biography'|trans }}</h2>
+            <div class="col-sm-6 wow fadeInUp">
+            </div>
+            <div class="col-sm-6 wow fadeInRight textbio">
                 {{ ez_render_field(content, 'text_bio') }}
             </div>
-            <div class="col-sm-6 wow fadeInUp">
-                {{ ez_render_field(content, 'image_bio', {
-                    parameters: {
-                        alias: 'top_image',
-                        class: 'img-responsive lazyload'
-                    }
-                }) }}
-            </div>
-        </div>
+        <h2 class="title-bio hidden-xs">{{ 'app.title.biography'|trans }}</h2>
     </div>
 </section>
