--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_footer.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_footer.html.twig
@@ -3,5 +3,8 @@
     <div class="container">
         <a rel="nofollow" href="http://lucasimonin.me" target="_blank">Lucas SIMONIN</a> ©
         <span id="copyright-year">2016</span>
+        <ul class="nav navbar-nav navbar-right">
+            {{ render( controller( 'AppSiteBundle:Common:languages', {'routeRef': ez_route()} ) ) }}
+        </ul>
     </div>
 </footer>
