fix issue in menu

--- a/src/App/Bundle/SiteBundle/Resources/public/css/main.css
+++ b/src/App/Bundle/SiteBundle/Resources/public/css/main.css
@@ -193,30 +193,6 @@ footer a, footer a:hover, footer a:focus {
   display: none;
 }
 
-#homepage {
-  height: 400px;
-}
-
-.content-filter {
-  margin-bottom: 10px;
-}
-
-.filter {
-  font-size: 20px;
-  background-color: transparent;
-  border: 1px solid #333;
-}
-
-.filter:hover, .filter:focus, .filter:active {
-  background-color: #eee;
-}
-
-.filter.active {
-  background-color: #eee;
-  cursor: default;
-  text-decoration: none;
-}
-
 .carousel-indicators li {
   border-color:#333;
 }
@@ -333,52 +309,6 @@ header {
   padding-right: 0;
   padding-left: 0;
 }
-.portfolio-box {
-  position: relative;
-  display: block;
-  max-width: 650px;
-  margin: 0 auto;
-}
-.portfolio-box .portfolio-box-caption {
-  color: white;
-  opacity: 0;
-  display: block;
-  background: rgba(192, 192, 192, 0.9);
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  -webkit-transition: all 0.35s;
-  -moz-transition: all 0.35s;
-  transition: all 0.35s;
-}
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-  font-family: 'Dosis', 'Helvetica Neue', sans-serif;
-  padding: 0 15px;
-}
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 14px;
-}
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-  font-size: 18px;
-}
-.portfolio-box:hover .portfolio-box-caption {
-  opacity: 1;
-}
-.portfolio-box:focus {
-  outline: none;
-}
 .call-to-action h2 {
   margin: 0 auto 20px;
 }
@@ -421,12 +351,12 @@ header {
   color:#333;
 }
 
-.btn-social-icon:hover {
-  background-color: transparent;
-}
-
 .nav>li>a.btn-social-icon {
   padding: 5px 15px;
+}
+
+.nav>li>a.btn-social-icon:hover {
+  background-color: #eee;
 }
 
 .btn-social-icon i {
