--- a/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_footer_script.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/pagelayout/page_footer_script.html.twig
@@ -4,10 +4,7 @@
     <script src="{{ asset( 'assets/vendor/jquery.easing/js/jquery.easing.min.js' ) }}"></script>
     <script src="{{ asset( 'assets/vendor/bootstrap/dist/js/bootstrap.min.js' ) }}"></script>
     <script src="{{ asset( 'assets/vendor/scrollreveal/dist/scrollreveal.min.js' ) }}"></script>
-    <script src="{{ asset( 'assets/vendor/imagesloaded/imagesloaded.pkgd.min.js' ) }}"></script>
-    <script src="{{ asset( 'assets/vendor/masonry/dist/masonry.pkgd.min.js' ) }}"></script>
     <script src="{{ asset( 'assets/vendor/classie/classie.js' ) }}"></script>
-    <script src="{{ asset( 'assets/vendor/wow/dist/wow.min.js' ) }}"></script>
     <script src="{{ asset( 'bundles/appsite/js/script.js' ) }}"></script>
 {% else %}
     {% javascripts filter='uglifyjs2'
@@ -16,7 +13,7 @@
         'assets/vendor/bootstrap/dist/js/bootstrap.min.js'
         'assets/vendor/scrollreveal/dist/scrollreveal.min.js'
         'assets/vendor/classie/classie.js'
-        'assets/vendor/wow/dist/wow.min.js'
+        'bundles/appsite/js/blockclicdroit.js'
         'bundles/appsite/js/script.js'
     %}
     <script src="{{ asset_url }}"></script>
