--- a/src/App/Bundle/SiteBundle/Resources/public/css/main.css
+++ b/src/App/Bundle/SiteBundle/Resources/public/css/main.css
@@ -5,7 +5,7 @@ body {
 }
 body {
   font-family: 'Dosis', 'Helvetica Neue', sans-serif;
-  background-color: #2e4857;
+  background-color: #1e303c;
   color:#e0e2e4;
 }
 hr {
@@ -385,6 +385,7 @@ header {
 h1.gallery-title {
   font-size: 80px;
   margin-top: calc(50% + 88px);
+  text-transform: capitalize;
 }
 
 #all-gallery {
