--- a/src/App/Bundle/SiteBundle/Resources/views/content/full/gallery.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/full/gallery.html.twig
@@ -16,7 +16,7 @@
                             class: 'img-responsive toppicture'
                         }
                     }) }}
-                        <span class="hover-text">{{ 'app.title.dessin'|trans }}</span>
+                        <span class="hover-text">{{ 'app.filter.dessin'|trans }}</span>
                     </a>
                     </div>
                     <div class="col-sm-4">
@@ -26,7 +26,7 @@
                                     class: 'img-responsive bigpicture'
                                 }
                             }) }}
-                            <span class="hover-text">{{ 'app.title.peinture'|trans }}</span>
+                            <span class="hover-text">{{ 'app.filter.peinture'|trans }}</span>
                         </a>
                     </div>
                     <div class="col-sm-4">
@@ -36,7 +36,7 @@
                             class: 'img-responsive bottompicture'
                         }
                     }) }}
-                        <span class="hover-text">{{ 'app.title.photo'|trans }}</span>
+                        <span class="hover-text">{{ 'app.filter.photo'|trans }}</span>
                     </a>
                 </div>
 
