--- a/src/App/Bundle/SiteBundle/Resources/views/content/parts/gallery.html.twig
+++ b/src/App/Bundle/SiteBundle/Resources/views/content/parts/gallery.html.twig
@@ -30,7 +30,7 @@ style="background-color:#3d5462"
                                                     }
                                                 }) }}
                                         {% if not ez_is_field_empty(item, 'facebook_url') %}</a>{% endif %}
-                                            <div class="text-center text-bottom {% if ez_field_value(item, 'black_title') %}black-color{% endif %}">
+                                            <div class="text-center text-bottom {% if ez_field_value(item, 'black_title').bool %}black-color{% endif %}">
                                                 <p class="title-gallery"><i>{{ ez_render_field(item, 'title') }}</i></p>
                                                 <p>{{ ez_render_field(item, 'method') }}</p>
                                                 <p>{{ ez_render_field(item, 'size') }}</p>
